--- a/pages/pages-root-folder/404.md
+++ b/pages/pages-root-folder/404.md
@@ -1,17 +1,23 @@
 ---
 layout: page
-title: "Oops! Nothing here..."
+title: "PAGE NOT FOUND"
 subheadline: "HTTP 404"
-teaser: "Maybe the webpage was moved or deleted; or did you maybe mistype the link?"
+# teaser: "Maybe the webpage was moved or deleted; or did you maybe mistype the link?"
 sitemap: false
 permalink: "/404.html"
 ---
-## No problem!
+## But Eddie Ray and I are certainly glad we **FOUND** you ;)
 
-Try...  
-...to start over on the [home page]({{ site.baseurl }}/);  
-...to **search** below;  
-if you can't find it, [ask about it]({{ site.baseurl }}/contact/).
+  <center>
+    <iframe width="560" height="315" 
+    
+    src="https://www.youtube.com/embed/VyqB3Ixubf4?version=3&loop=1&playlist=VyqB3Ixubf4&autoplay=1&cc_load_policy=1" 
+    
+    frameborder="0" allowfullscreen></iframe>
+  </center>
+
+## Anyway...
+Try to start over on the [home page]({{ site.baseurl }}/) or **search** below
 
 ### Search
 
