--- a/_posts/recipes/2016-09-03-challah-1-0.md
+++ b/_posts/recipes/2016-09-03-challah-1-0.md
@@ -30,19 +30,45 @@ public bread challah_1_0(Stuff ingredients)
 
 {
 ===
+<img src="{{ site.urlimg }}2016-09-03-challah-1-0-images/2-froth.jpg" width="250">
+
+Don't panic if the yeast doesn't look too peppy and frothy.  It'll eventually wake up!  
 
 1. 1T `Yeast` + 1T `Sugar` + 2.5C `Warm Water`: let **froth** for ~5min
 2. 0.33C `Sugar` + 2T `Sesame Oil` + 2T `Coconut Oil` + 2 `Eggs` + 1T `Salt`: **mix** at medium speed until combined
+
+    <img src="{{ site.urlimg }}2016-09-03-challah-1-0-images/3-mix.jpg" width="250">
+
 3. 8C `Flour`: **slowly add** to Wet Ingredients
 4. **Knead** 6-8min
+
+    <img src="{{ site.urlimg }}2016-09-03-challah-1-0-images/4-rise.jpg" width="250">
+    <img src="{{ site.urlimg }}2016-09-03-challah-1-0-images/5-double.jpg" width="250">
+
+    Wow so cute!
+
 5. Let dough **rise** for 1.5hr
+
+    <img src="{{ site.urlimg }}2016-09-03-challah-1-0-images/6-punch.jpg" width="250">
+
+    If your dough thinks he's big and all, you can rough him up (punch the dough down).  That way, it's easier to divide and handle.
+
 6. **Divide** dough in half
 7. **Knead** each dough ball for 5min
+
+    <img src="{{ site.urlimg }}2016-09-03-challah-1-0-images/7-braid.jpg" width="250">
+
 8. **Braid** one of the dough balls
+
+    <img src="{{ site.urlimg }}2016-09-03-challah-1-0-images/8-both.jpg" width="250">
+
 9. Carefully place dough on a greased pan, **cover** with plastic wrap, and let **rise** for 1hr
 10. Repeat steps 8 and 9 for the second dough ball
 11. 1 `Egg`: **mix** egg and **brush** challah
 12. **Bake** in 375F (190C) oven for 40min
+
+    <img src="{{ site.urlimg }}2016-09-03-challah-1-0-images/final.jpg" width="250">
+
 13. **Cool** for 10min; **Sample**
 
 }
