finished red bean challah 1.0 tldr and added images

--- a/_posts/recipes/2016-09-03-challah-1-0.md
+++ b/_posts/recipes/2016-09-03-challah-1-0.md
@@ -65,11 +65,12 @@ Don't panic if the yeast doesn't look too peppy and frothy.  It'll eventually wa
 9. Carefully place dough on a greased pan, **cover** with plastic wrap, and let **rise** for 1hr
 10. Repeat steps 8 and 9 for the second dough ball
 11. 1 `Egg`: **mix** egg and **brush** challah
-12. **Bake** in 375F (190C) oven for 40min
+12. **Sprinkle** sesame seeds on top
+13. **Bake** in 375F (190C) oven for 40min
 
     <img src="{{ site.urlimg }}2016-09-03-challah-1-0-images/final.jpg" width="250">
 
-13. **Cool** for 10min; **Sample**
+14. **Cool** for 10min; **Sample**
 
 }
 ===
