added the basics of the red bean challah 1.0 recipe

--- a/_posts/recipes/2016-09-03-challah-1-0.md
+++ b/_posts/recipes/2016-09-03-challah-1-0.md
@@ -18,13 +18,13 @@ image:
 
 This time, no fancy stuff.  I just want to make challah that's tasty
 
-{% highlight c %}
-@Edible something I could proudly serve to people
-@Bready solid outside, soft inside
-
-@throws PanicDance If gluten-free flour sabotages all hopes and dreams 
-@return challah
-
+{% highlight java %}
+/*
+* @Edible something I could proudly serve to people
+* @Bready solid outside, soft inside
+* 
+* @return challah
+*/
 public bread challah_1_0(Stuff ingredients) 
 {% endhighlight %}
 
